# momentum_trader

./: .gitignore  README.md  fast_backtest.py  get_nifty150.py  git_workflow.md  main.py  pyproject.toml  test_download.py  test_tickers.py  upload_to_sheets.py  verify_indicators.py  wait_and_upload.sh
src/: config.py  data_extractor.py  indicators.py  screening.py  simulator.py  trade_plan.py
tests/: test_data_extractor.py  test_indicators.py  test_screening.py  test_trade_plan.py
