[tool.poetry]
name = "momentum_trader_project"
version = "0.1.0"
description = "A momentum trading strategy project that extracts stock data, calculates indicators, screens stocks, and generates trade plans."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"
yfinance = "^0.1.63"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"